# Inflation-is-a-Monster

./: .gitignore  .replit  README.md  app.py  pyproject.toml  replit.md  requirements-cloud.txt
.streamlit/: config.toml
pages/: 1_📊_Dashboard.py  2_📈_Historical_Analysis.py  3_🔗_Correlation_Analysis.py  4_🧮_Inflation_Calculator.py  5_📋_Data_Export.py
utils/: calculations.py  charts.py  data_fetcher.py
